<resources>
    <string name="app_name">AGVFA</string>
    <string name="extra">Extra</string>
    <string name="loading">Loading</string>
    <string name="com_section">Community</string>
    <string name="edu_section">Education</string>
    <string name="about_us_section">About us</string>
    <string name="lesson_section">Lesson #</string>
    <string name="video_section">Play video</string>
    <string name="quiz">Quiz</string>
    <string name="videos">Videos</string>
    <string name="_100_100">100/100</string>
    <string name="question_1">question1</string>
    <string name="quuestion_2">question2</string>
    <string name="question_3">question3</string>
    <string name="question_4">question4</string>
    <string name="register_name">Video name</string>
    <string name="register_extension">Extension</string>
    <string name="register_id">Video Id</string>
    <string name="extra_videos">Extra Videos</string>
    <string name="find_video">Find Video</string>
    <string name="empty_fields">Please enter all fields</string>
    <string name="not_valid_video">Not a valid video</string>
    <string name="download">Download</string>
    <string name="take_quiz">Take Quiz !</string>
    <string name="video_menu">Videos menu</string>
    <string name="summit_answers">Upload Answers</string>
    <string name="who_we_are">A Global Voice for Autism brings together teams of autism
        professionals, trauma specialists and local community experts to train key community
        stakeholders in the skills to support and include autistic children and children whose lives
        have been impacted by trauma in their communities. Because we have seen that trainees learn
        most effectively when they are also receiving the emotional and intellectual support they
        need, all of our programs are coupled with parent and sibling support and self-development,
        community education and awareness programming and inclusion advocacy training for relevant
        local stakeholders. groups and teacher support groups, as well as with community education
        sessions. Using culturally sensitive, evidence-based materials designed for limited resource
        communities, A Global Voice for Autism disseminates techniques, networks and information
        that benefit autistic children and their communities for years to come." </string>
    <string name="founding_story">In 2012, our founder, Melissa Diamond, met the mother of a
        newly-diagnosed autistic child. After learning about her daughter’s diagnosis, the mother
        planned to return home and hide her daughter at in her home in order to avoid the autism
        stigma in her community. Diamond has an autistic loved one in the U.S. who is autistic and
        non-verbal and was struck by how different her friend’s life might have been if she had
        simply been born somewhere else. A Global Voice for Autism was founded on the principle that
        ALL autistic children should have access to education, community and support, no matter
        where they live."</string>
    <string name ="welcome_to_the_community_here_you_can_join_us_in_our_different_social_media_groups_and_keep_in_touch_for_new_updates_share_experiences_and_build_a_stronger_community_this_area_is_intended_to_be_just_for_parents_if_its_your_first_time_here_please_sign_up_enjoy_the_experience" translatable="false">
        welcome to the community here you can join us in our different social media groups and keep
        in touch for new updates share experiences and build a stronger community this area is intended to be just for parents if
        its your first time here please sign up enjoy the experience
       </string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_registered_sign_in_here">Already registered? Sign In here</string>
    <string name="disable_filter">Disable Filter</string>
    <string name="enable_filter">Enable Filter</string>
    <string name="sign_in">Sign In</string>
    <string name="Username"> Username</string>
    <string name="Password">Password</string>
    <string name="INCLUDE2020" />

</resources>
