<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/backgroundColor">


    <view
        android:id="@+id/ytplayerView"
        class="com.google.android.youtube.player.YouTubePlayerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    <Button
        android:id="@+id/downloadButton"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="downloadVideo"
        android:text="@string/download" />

    <Button
        android:id="@+id/quizButton"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="gotoQuiz"
        android:text="@string/take_quiz" />

    <Button
        android:id="@+id/returnButton"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="gotoVideoList"
        android:text="@string/video_menu" />

    <Button
        android:id="@+id/playOffline"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="gotoOfflineVideo"
        android:text="Watch Offline" />
    </LinearLayout>

</RelativeLayout>